<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!--    <PreferenceCategory
        android:title="Geral"
        android:key="pref_key_geral">-->

    <br.com.controlepontosimples.TimePickerPreference
        android:key="pref_key_hora_inicio_almoco"
        android:summary="@string/pref_hora_inicio_almoco_default_value"
        android:title="@string/pref_title_hora_inicio_almoco"
        android:defaultValue="@string/pref_hora_inicio_almoco_default_value"
        />

    <ListPreference
        android:key="pref_key_intervalo_almoco"
        android:title="@string/pref_title_intervalo_almoco"
        android:defaultValue="@string/pref_intervalo_almoco_default_value"
        android:entries="@array/pref_intevalo_almoco_list_titles"
        android:entryValues="@array/pref_intevalo_almoco_list_values"
        android:negativeButtonText="@string/texto_botao_cancelar"
        android:positiveButtonText="@string/texto_botao_ok" />
    <!--</PreferenceCategory>-->


    <!--<PreferenceCategory
        android:title="Notificação"
        android:key="pref_key_notificacao">-->
    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
<!--    <CheckBoxPreference
        android:key="notifications_new_message"
        android:title="@string/pref_title_new_message_notifications"
        android:defaultValue="true" />-->

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
<!--    <RingtonePreference
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_ringtone"
        android:title="@string/pref_title_ringtone"
        android:ringtoneType="notification"
        android:defaultValue="content://settings/system/notification_sound" />-->

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
<!--    <CheckBoxPreference
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_vibrate"
        android:title="@string/pref_title_vibrate"
        android:defaultValue="true" />-->

        <!--</PreferenceCategory>-->
</PreferenceScreen>
